--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: gradle/wrapper-validation-action@v1
-      - run: gradle applyPatches :quilt-loom:build :quilt-loom:check -x test --stacktrace --warning-mode fail
+      - run: gradle applyPatches :quilt-loom:build :quilt-loom:check -x :quilt-loom:test --stacktrace --warning-mode fail
       - uses: actions/upload-artifact@v2
         with:
           name: loom-output
