--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - run: git config user.email "nobody@example.com"
+      - run: git config user.name "Nobody"
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
       - run: gradle :quilt-loom:build :quilt-loom:check -x :quilt-loom:test --stacktrace --warning-mode fail
