--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -19,10 +19,6 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
       - run: gradle :quilt-loom:build :quilt-loom:check -x :quilt-loom:test --stacktrace --warning-mode fail
-      - uses: actions/upload-artifact@v2
-        with:
-          name: loom-output
-          path: ./
 
   # This job is used to feed the test matrix of next job to allow the tests to run in parallel
   prepare_test_matrix:
@@ -35,9 +31,14 @@ jobs:
       options: --user root
 
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v2
         with:
-          name: loom-output
+          submodules: true
+      - run: git config --global user.email "nobody@example.com"
+      - run: git config --global user.name "Nobody"
+      - uses: gradle/wrapper-validation-action@v1
+      - run: gradle applyPatches
+
       - run: gradle :quilt-loom:writeActionsTestMatrix --stacktrace --warning-mode fail
       - id: set-matrix
         run: echo "::set-output name=matrix::$(cat quilt-loom/build/test_matrix.json)"
@@ -60,9 +61,14 @@ jobs:
       options: --user root
 
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v2
         with:
-          name: loom-output
+          submodules: true
+      - run: git config --global user.email "nobody@example.com"
+      - run: git config --global user.name "Nobody"
+      - uses: gradle/wrapper-validation-action@v1
+      - run: gradle applyPatches
+
       - run: gradle :quilt-loom:test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
         env:
           TEST_WARNING_MODE: fail
@@ -85,9 +91,13 @@ jobs:
     runs-on: windows-2022
 
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v2
         with:
-          name: loom-output
+          submodules: true
+      - run: git config --global user.email "nobody@example.com"
+      - run: git config --global user.name "Nobody"
+      - uses: gradle/wrapper-validation-action@v1
+
       - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
@@ -114,14 +124,15 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/checkout@v2
         with:
-          name: loom-output
-
+          submodules: true
+      - run: git config --global user.email "nobody@example.com"
+      - run: git config --global user.name "Nobody"
+      - uses: gradle/wrapper-validation-action@v1
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-
       - run: ./gradlew :quilt-loom:test --tests *ReproducibleBuildTest --stacktrace --warning-mode fail
 
       - uses: actions/upload-artifact@v2
