--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -18,7 +18,8 @@ jobs:
       - run: git config --global user.name "Nobody"
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
-      - run: gradle :quilt-loom:build :quilt-loom:check -x :quilt-loom:test --stacktrace --warning-mode fail
+      - run: gradle build check -x test --stacktrace --warning-mode fail
+        working-directory: ./quilt-loom
 
   # This job is used to feed the test matrix of next job to allow the tests to run in parallel
   prepare_test_matrix:
@@ -39,7 +40,8 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
 
-      - run: gradle :quilt-loom:writeActionsTestMatrix --stacktrace --warning-mode fail
+      - run: gradle writeActionsTestMatrix --stacktrace --warning-mode fail
+        working-directory: ./quilt-loom
       - id: set-matrix
         run: echo "::set-output name=matrix::$(cat quilt-loom/build/test_matrix.json)"
 
@@ -69,7 +71,8 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
 
-      - run: gradle :quilt-loom:test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
+      - run: gradle test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
+        working-directory: ./quilt-loom
         env:
           TEST_WARNING_MODE: fail
 
@@ -77,7 +80,7 @@ jobs:
         if: ${{ failure() }}
         with:
           name: ${{ matrix.test }} (${{ matrix.java }}) Results
-          path: build/reports/
+          path: ./quilt-loom/build/reports/
 
   run_tests_windows:
     needs: prepare_test_matrix
@@ -102,7 +105,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-      - run: ./gradlew :quilt-loom:test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
+      - run: ./gradlew test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
+        working-directory: ./quilt-loom
         env:
           TEST_WARNING_MODE: fail
 
@@ -110,7 +114,7 @@ jobs:
         if: ${{ failure() }}
         with:
           name: ${{ matrix.test }} (${{ matrix.java }}) Results
-          path: build/reports/
+          path: ./quilt-loom/build/reports/
 
   # Special case this test to run across all os's
   reproducible_build_test:
@@ -133,10 +137,11 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
-      - run: ./gradlew :quilt-loom:test --tests *ReproducibleBuildTest --stacktrace --warning-mode fail
-
+      - run: ./gradlew applyPatches
+      - run: ./gradlew test --tests *ReproducibleBuildTest --stacktrace --warning-mode fail
+        working-directory: ./quilt-loom
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
           name: Reproducible Build ${{ matrix.os }} (${{ matrix.java }}) Results
-          path: build/reports/
+          path: ./quilt-loom/build/reports/
