--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
       - run: gradle build check -x test --stacktrace --warning-mode fail
-        working-directory: ./quilt-loom
+        working-directory: quilt-loom
 
   # This job is used to feed the test matrix of next job to allow the tests to run in parallel
   prepare_test_matrix:
@@ -41,7 +41,7 @@ jobs:
       - run: gradle applyPatches
 
       - run: gradle writeActionsTestMatrix --stacktrace --warning-mode fail
-        working-directory: ./quilt-loom
+        working-directory: quilt-loom
       - id: set-matrix
         run: echo "::set-output name=matrix::$(cat quilt-loom/build/test_matrix.json)"
 
@@ -72,7 +72,7 @@ jobs:
       - run: gradle applyPatches
 
       - run: gradle test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
-        working-directory: ./quilt-loom
+        working-directory: quilt-loom
         env:
           TEST_WARNING_MODE: fail
 
@@ -80,7 +80,7 @@ jobs:
         if: ${{ failure() }}
         with:
           name: ${{ matrix.test }} (${{ matrix.java }}) Results
-          path: ./quilt-loom/build/reports/
+          path: quilt-loom/build/reports/
 
   run_tests_windows:
     needs: prepare_test_matrix
@@ -106,7 +106,7 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - run: ./gradlew test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
-        working-directory: ./quilt-loom
+        working-directory: quilt-loom
         env:
           TEST_WARNING_MODE: fail
 
@@ -114,7 +114,7 @@ jobs:
         if: ${{ failure() }}
         with:
           name: ${{ matrix.test }} (${{ matrix.java }}) Results
-          path: ./quilt-loom/build/reports/
+          path: quilt-loom/build/reports/
 
   # Special case this test to run across all os's
   reproducible_build_test:
@@ -139,9 +139,9 @@ jobs:
           java-version: ${{ matrix.java }}
       - run: ./gradlew applyPatches
       - run: ./gradlew test --tests *ReproducibleBuildTest --stacktrace --warning-mode fail
-        working-directory: ./quilt-loom
+        working-directory: quilt-loom
       - uses: actions/upload-artifact@v2
         if: ${{ failure() }}
         with:
           name: Reproducible Build ${{ matrix.os }} (${{ matrix.java }}) Results
-          path: ./quilt-loom/build/reports/
+          path: quilt-loom/build/reports/
