--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -100,11 +100,11 @@ jobs:
       - run: git config --global user.email "nobody@example.com"
       - run: git config --global user.name "Nobody"
       - uses: gradle/wrapper-validation-action@v1
-
       - name: setup jdk ${{ matrix.java }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
+      - run: ./gradlew applyPatches
       - run: ./gradlew test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
         working-directory: quilt-loom
         env:
