--- a/.github/workflows/test-push.yml
+++ b/.github/workflows/test-push.yml
@@ -20,6 +20,13 @@ jobs:
       - run: gradle applyPatches
       - run: gradle build check -x test --stacktrace --warning-mode fail
         working-directory: quilt-loom
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ github.run_id }}-${{ github.run_number }}
+      - run: gradle --stop
 
   # This job is used to feed the test matrix of next job to allow the tests to run in parallel
   prepare_test_matrix:
@@ -39,7 +46,12 @@ jobs:
       - run: git config --global user.name "Nobody"
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
-
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ github.run_id }}-${{ github.run_number }}
       - run: gradle writeActionsTestMatrix --stacktrace --warning-mode fail
         working-directory: quilt-loom
       - id: set-matrix
@@ -70,7 +82,12 @@ jobs:
       - run: git config --global user.name "Nobody"
       - uses: gradle/wrapper-validation-action@v1
       - run: gradle applyPatches
-
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ github.run_id }}-${{ github.run_number }}
       - run: gradle test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
         working-directory: quilt-loom
         env:
@@ -105,6 +122,12 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - run: ./gradlew applyPatches
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ github.run_id }}-${{ github.run_number }}
       - run: ./gradlew test --tests ${{ matrix.test }} --stacktrace --warning-mode fail
         working-directory: quilt-loom
         env:
@@ -138,6 +161,12 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
       - run: ./gradlew applyPatches
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ github.run_id }}-${{ github.run_number }}
       - run: ./gradlew test --tests *ReproducibleBuildTest --stacktrace --warning-mode fail
         working-directory: quilt-loom
       - uses: actions/upload-artifact@v2
